--- a/css/home.css
+++ b/css/home.css
@@ -1,1 +1,31 @@
-
+.main .blog-list .blog {
+  padding: 35px 0px;
+  border-top: 4px solid #0cc;
+}
+.main .blog-list .blog .image {
+  width: 100%;
+  height: 245px;
+}
+.main .blog-list .blog .title {
+  color: #0cc;
+  margin: 35px 0px;
+  font-size: 26px;
+  font-weight: 450px  
+}
+.main .blog-list .blog .demo {
+  color: #999;
+  margin-bottom: 55px;
+}
+.main .blog-list .blog .type-date {
+  color: #0cc;
+  border-bottom: 1px solid rgba(0,0,0,.1);
+}
+.space-between {
+  display: flex;
+  justify-content: space-between;
+}
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
